Fix spacing issue for non-contained translate tabs by increasing margin from mt-6 to mt-8

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -7,3 +7,4 @@
 .h-0 { height: 0px; }
 .p-0 { padding: 0px; }
 .p-6 { padding: 1.5rem; }
+.mt-8 { margin-top: 2rem; }
